create features section

--- a/src/styles/App.sass
+++ b/src/styles/App.sass
@@ -11,6 +11,7 @@
         display: grid
         justify-content: center
         gap: 1rem
+        padding: 3rem 0 5rem
 
     img
         justify-self: center
@@ -22,6 +23,15 @@
         font-weight: 600
         line-height: 1.25
 
+    h2
+        @extend h1
+        font-size: 1.75rem
+
     p
         line-height: 1.75
         padding: 0 0.5rem
+
+.Features
+
+    img
+        width: 100%
