--- a/src/styles/App.sass
+++ b/src/styles/App.sass
@@ -27,6 +27,10 @@
         @extend h1
         font-size: 1.75rem
 
+    h3
+        @extend h1
+        font-size: 1.5rem
+
     p
         line-height: 1.75
         padding: 0 0.5rem
