--- a/src/styles/App.sass
+++ b/src/styles/App.sass
@@ -8,6 +8,7 @@ $font:  'Bai Jamjuree', sans-serif
     font-family: $font
     color: $grayish_blue
     text-align: center
+    background: url('src/assets/images/bg-header-mobile.png') no-repeat
 
     section
         display: grid
@@ -42,9 +43,12 @@ $font:  'Bai Jamjuree', sans-serif
     img
         width: 100%
 
+    .Icon
+        width: 3.125rem
+
 .Footer
     display: grid
-    background: lighten($light_blue, 28%)
+    background: lighten($light_blue, 29%)
     justify-items: center
     text-align: center
     gap: 3rem
