--- a/src/styles/App.sass
+++ b/src/styles/App.sass
@@ -87,3 +87,28 @@ $font:  'Bai Jamjuree', sans-serif
     
     img
         width: 1.5rem
+
+
+// tablet and desktop displays (landscape)
+@include width(1080)
+    .App
+        background: url('src/assets/images/bg-header-desktop.png') no-repeat
+        padding: 0
+
+        section
+            align-content: center
+            justify-items: center
+            min-height: 100vh
+            grid-auto-rows: min-content
+
+        h1
+            font-size: 2.75rem
+            line-height: 1
+
+        p
+            max-width: 45rem
+            font-size: 1.25rem
+
+        .Features
+            background: pink
+            padding: 6rem 0
