--- a/src/styles/_util.sass
+++ b/src/styles/_util.sass
@@ -2,3 +2,8 @@ $strong_cyan: hsl(171, 66%, 44%)
 $light_blue: hsl(233, 100%, 69%)
 $dark_grayish_blue: hsl(210, 10%, 33%)
 $grayish_blue: hsl(201, 11%, 66%)
+
+@mixin width($width)
+    @media screen and (min-width: #{$width}px)
+        @content
+    
