--- a/src/styles/App.sass
+++ b/src/styles/App.sass
@@ -112,3 +112,32 @@ $font:  'Bai Jamjuree', sans-serif
         .Features
             background: pink
             padding: 6rem 0
+
+            p
+                max-width: 50rem
+            
+            img
+                width: 80%
+
+        .SubFeatures
+            display: grid
+            grid-template-columns: repeat(2, auto)
+            align-items: center
+            text-align: left
+            gap: 8rem
+            margin-top: 2rem
+            position: relative
+            left: -6rem
+
+            div
+                grid-column: 2  
+
+            h3
+                font-size: 1.5rem
+
+            p
+                max-width: 340px
+                font-size: 1rem
+
+            img
+                width: 100%
