--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -15,6 +15,9 @@ html, body, div, span, object, iframe, figure, h1, h2, h3, h4, h5, h6, p, blockq
 footer, header, nav, section, main
     display: block
 
+html
+    font-size: 18px
+
 body
     line-height: 1
 
