edit src url for background image

--- a/src/styles/App.sass
+++ b/src/styles/App.sass
@@ -9,7 +9,7 @@ $font:  'Bai Jamjuree', sans-serif
     font-family: $font
     color: $grayish_blue
     text-align: center
-    background: url('src/assets/images/bg-header-mobile.png') no-repeat
+    background: url('../assets/images/bg-header-mobile.png') no-repeat
     background-size: 100%
 
     section
@@ -97,7 +97,7 @@ $font:  'Bai Jamjuree', sans-serif
 // tablet and desktop displays (landscape)
 @include width(1440)
     .App
-        background: url('src/assets/images/bg-header-desktop.png') no-repeat
+        background: url('../assets/images/bg-header-desktop.png') no-repeat
         background-size: 100%
         padding: 0 8rem
 
